--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
   <style>
-    body {background-color: black;}
-    h1,h2   {color: lime;}
+    body {background-color: white;}
+    h1,h2   {color: red;}
     
   </style>
 </head>
 <body background-color = "black">
-  <h1>------------------------- Here is my module-4 solution ------------------------</h1>
-  <h2>-------------------Right click here; inspect element and checkout the console --------------------</h2>
+  <h1>module-4 solution </h1>
+  <h2>inspect element and checkout the console</h2>
     
 </body>
 </html>
