--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
   </style>
 </head>
-<body background-color = "black">
+<body background-color = "white">
   <h1>module-4 solution </h1>
   <h2>inspect element and checkout the console</h2>
     
